# Snake

./: .gitignore  CMakeLists.txt  README.md
src/: game.cpp  game_io.cpp  graphics.cpp  main.cpp  screen.cpp  snake.cpp  utils.cpp
src/headers/: coordinate.hpp  direction.hpp  game.hpp  game_io.hpp  graphics.hpp  screen.hpp  snake.hpp  state.hpp  utils.hpp
